# bblocks-datacommons-tools

./: Agents.md  CONTRIBUTING.MD  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: mkdocs.yml
docs/docs/: changelog.md  cli-tools.md  dc-schemas.md  getting-started.md  index.md  loading-data.md  preparing-data.md  why-bblocks-datacommons-tools.md
src/bblocks/datacommons_tools/: __init__.py
src/bblocks/datacommons_tools/cli/: __init__.py  main.py
src/bblocks/datacommons_tools/custom_data/: __init__.py  config.py  data_management.py  dc_config.py  models.py  schema_tools.py
src/bblocks/datacommons_tools/custom_data/models/: common.py  config_file.py  data_files.py  files.py  mcf.py  stat_vars.py  topics.py
src/bblocks/datacommons_tools/data_loading/: config.py  dc_config.py  dcconfigmanager.py
src/bblocks/datacommons_tools/data_loading/models/: common.py  config.py  mcf.py  stat_vars.py
src/bblocks/datacommons_tools/gcp_utilities/: __init__.py  authentication.py  jobs.py  pipeline.py  settings.py  storage.py
src/bblocks/datacommons_tools/rsi/: rsi.py
src/bblocks_datacommons_tools/: __init__.py
src/bblocks_datacommons_tools/rsi/: config.json  rsi.py
tests/: README.md  test_cli.py  test_cli_gcp.py  test_data_management.py  test_golden_serialization.py  test_models_common.py  test_models_config_file.py  test_models_mcf.py  test_models_stat_vars.py  test_schema_tools.py  test_storage.py
tests/goldens/: config.json  custom_nodes.mcf  sample.csv  sample_csv_nodes.mcf  sample_node.mcf
