[project]
name = "bblocks-datacommons-tools"
version = "0.0.1"
description = "Tools to work with Data Commons"
authors = [
    {name = "ONE Campaign"},
    {name = "Luca Picci",email = "lpicci96@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "bblocks_datacommons_tools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
